Display notice/alert to display in login view

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,4 +13,11 @@
         <input type="submit" value="Sign up">
       </form>
     </div>
+    <div class="flash-messages">
+      <% flash.each do |key, message| %>
+        <div class="<%= key %>">
+          <%= message %>
+        </div>
+      <% end %>
+    </div>
   </div>
