--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,6 +1,17 @@
-<h1>Password Reset</h1>
+<!-- app/views/user_mailer/password_reset.html.erb -->
+
+<h1>Password Reset Instructions</h1>
+
+<p>Hello <%= @user.name || @user.email %>,</p>
+
+<p>You requested to reset your password. Please click the link below to reset it:</p>
+
 <p>
-  To reset your password, click the link below:
+  <%= link_to 'Reset Password', edit_password_reset_url(token: @token) %>
 </p>
 
-<%= link_to "Reset password", edit_password_reset_url(token: @token) %>
+<p>This link will expire in 1 hour.</p>
+
+<p>If you did not request a password reset, please ignore this email.</p>
+
+<p>Thanks,<br>Your App Team</p>
